--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,7 @@
 </head>
 
 <body id="aboutme">
+    <section class= "hello">
     <h2>About Me</h2>
     <p> Hello! My name is Mia and I'm a history student at the University of Sheffield. I've always had a strong
         interest in technology due to my love of video games which began as a child. This interest only grew when I
@@ -19,6 +20,7 @@
         passion for web development as I like the challenge that comes along with trying to implement code to solve
         very visual problems. Other interests of minde include photograph and music, I have played the guitar since the
         age of seven!</p>
+        </section>
     <ul id="menu-bar">
         <li class="active"><a href="index.html">Home</a></li>
         <ul>
