--- a/u1outcome2.html
+++ b/u1outcome2.html
@@ -11,8 +11,7 @@
 
 <body class= "playcontainer">
     <section class="ucontainer">
-        <p>
-            <h3>2.1 Review the ongoing use of IT tools and change approach as needed - in making your own website, are you
+           <p><h3>2.1 Review the ongoing use of IT tools and change approach as needed - in making your own website, are you
                 happy
                 with the tools you used? E.g. Visual Studio Code, Trello</h3>
             I found Visual Studio Code very useful and easy to use. I’d used Sublime Text Editor before starting this
