--- a/u1outcome3.html
+++ b/u1outcome3.html
@@ -11,7 +11,7 @@
 
 <body id="u1outcome3">
     <div class="outcome3text">
-        <h3>3.1 Review the benefits and drawbacks of IT tools and systems used in terms of productivity and efficiency -
+        <h3 class="outcome3titles">3.1 Review the benefits and drawbacks of IT tools and systems used in terms of productivity and efficiency -
             could you have been more efficient when making your website? How? Could you have done it in teams?
         </h3>
         <p>As the design of this particular blog is very personal and stylistically close to my own personality, I think
@@ -25,10 +25,29 @@
         </p>
     </div>
     <div class="outcome3text">
-        <h3>3.2 Describe ways to improve productivity and efficiency
+        <h3 class="outcome3titles">3.2 Describe ways to improve productivity and efficiency
         </h3>
         <p>
-            While I would not suggest a team work structure on this sort of project, team work could be implemented
+            It is important to continuously take breaks to improve productivity because if you work for a long time
+            without taking a break your ability to process information and properly focus on what you are doing will
+            start to lessen. This is especially important when it comes to something as complex and finicky as writing
+            code, where the syntax has to be exact otherwise it will not work. Personally, I also work best when
+            listening to music so I find it better to put on my headphones to improve productivity as this helps me to
+            tune out the rest of the world and other distractions while I work. This can also help remind me to take
+            regular breaks because the natural stop of an album can act as an end point to take a short five minute
+            break or to review what I have done during that work period. It is also important to get a lot of fresh air
+            and eat well. I cannot focus if I am hungry and also it is important if a problem is stressing me out or
+            confusing with me to take a step away and perhaps go for a walk as getting away from the screen can often
+            help you to approach the problem from a new angle and perhaps find a solution you had not previously
+            considered.
+
+        </p>
+    </div>
+    <div class="outcome3text">
+        <h3 class="outcome3titles">3.3. Develop solutions to improve own productivity using IT in digital projects - what would you do
+            differently next time? Team work? Use of Slack?
+        </h3>
+        <p>While I would not suggest a team work structure on this sort of project, team work could be implemented
             somewhat through Slack. For example, if someone wanted to implement a certain feature or was stuck on how to
             code something onto their website, they could ask the class on Slack and then if someone else had a helpful
             weblink or knew the solution they could send that over or go and help the person face to face. This would
@@ -48,25 +67,10 @@
             features first and also the general content of my website and then I should have tried the more complex
             stuff after. This approach would have saved time and also would have ensured that the design and feel of the
             website was more stylistically sound as the base to build upwards from was already a strong, solid
-            foundation.
-        </p>
+            foundation. </p>
     </div>
     <div class="outcome3text">
-        <h3>3.3. Develop solutions to improve own productivity using IT in digital projects - what would you do
-            differently next time? Team work? Use of Slack?
-        </h3>
-        <p>While I would not suggest a team work structure on this sort of project, team work could be implemented
-            somewhat through Slack. For example, if someone wanted to implement a certain feature or was stuck on how to
-            code something onto their website, they could ask the class on Slack and then if someone else had a helpful
-            weblink or knew the solution they could send that over or go and help the person face to face. This would
-            not make the project a strict collaborative effort but it would allow for the benefits of team work in terms
-            of a lighter load of work to be implemented as we could help each other. It is good to draw on each other’s
-            knowledge as everyone will have attempted to design their website slightly differently and so will have
-            engaged with different coding tools or tricks, knowledge that they can then pass on.
-        </p>
-    </div>
-    <div class="outcome3text">
-        <h3>3.4 Describe how you would go about testing digital solutions
+        <h3 class="outcome3titles">3.4 Describe how you would go about testing digital solutions
         </h3>
         <p>The most important way to test a digital solution pertaining to the development of a blog/website, such as
             this project, is to write the code and then run the website on a local browser (before it is live).
