--- a/unit2.html
+++ b/unit2.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="unit2">
-    <div class="unit2font">
+    <div class="unit2text">
         <h3>1.1 Describing the content and layout for each page</h3>
         <p>The landing page has a brief description of me as a person and my interests, such as playing music, in large
             white text with a gif below which contains clips from the 1980s movie Akira. I chose to include a
@@ -20,9 +20,9 @@
             landing page. From here there is a navigation bar to check out the outcomes. The first outcome page contains
             an image of a red spaceman with my answers next to it in a black colour, then the next one has a gif of the
             playstation loading screen with my answers on the left.
-
-
         </p>
+    </div>
+    <div class="unit2text">
         <h3>1.5 Describing copyright and other constraints affecting websites
         </h3>
         <p>The UK law for copyright is the Copyright, Designs and Patents Act 1988 and it protects original creations
@@ -38,6 +38,8 @@
             making a website for general use especially, with flexibility in mind - ensuring that the text will expand
             for example when a user zooms in on a page.
         </p>
+    </div>
+    <div class="unit2text">
         <h3>1.6 Describing access issues that need taking into account - describe issues that people with disabilities
             may face when using webpages and how we can overcome them
         </h3>
@@ -50,6 +52,8 @@
             Serotek Systems Access. Such software will read aloud the information on the screen while others might also
             create a braille display of the website content for a user. It is therefore beneficial for designers and
             developers to ensure that their website can be read and engage with such software. </p>
+    </div>
+    <div class="unit2text">
         <h3>1.7 Describe which are the appropriate filetypes for websites
         </h3>
         <p>The appropriate file types are ones such as HTML and CSS, which are used to input the content and then the
