--- a/unit1.html
+++ b/unit1.html
@@ -18,7 +18,7 @@
             advertisement through promotional graphic design and computer graphics which could be implemented in TV or
             internet (such as on YouTube) advertisements. Online shopping is an incredibly strong market in the modern
             age, with 67% of millennials and 56% of gen-xers preferring to shop online, the two generations of the
-            future.</p>
+            future. - https://www.thebalancesmb.com/compare-brick-and-mortar-stores-vs-online-retail-sites-4571050</p>
     </div>
     <div class="unit1">
         <h3>1.2 Describing methods, skills and resources needed to complete digital projects successfully - what do you
@@ -28,16 +28,21 @@
             and that any possible problems ar eflagged up early and are effectively dealt with. Also, it is important to
             not push the boundaries of projects too much, attempting to include to omany features than is possible in
             your timeframe. While tempting, this could just bring additional stress for you or your team, while ensuring
-            that you waste time not working on the actual core of your project. For a digital project to succeed it is
+            that you waste time not working on the actual core of your project. -
+            https://www.mediavisioninteractive.com/digital-marketing-2/10-tips-for-effective-digital-project-management/
+            For a digital project to succeed it is
             important for all involved in the process to be effective communicators - whether this applies to teamwork
-            collaboration or communicating and updating the client as the project goes along. Another important aspect
+            collaboration or communicating and updating the client as the project goes along. -
+            https://www.mediavisioninteractive.com/digital-marketing-2/10-tips-for-effective-digital-project-management/
+            Another important aspect
             is attention to detail, pertaining both to code and context. While it is important to notice any errors in
             code or a method to execute a certain feature, it is also important that the user experience and actual
             content of the project is not compromised. In temrs of resources and tools, as well as Trello there are some
             other useful management systems such as Float or Google Calender which can help divvy up tasks and set
-            deadlines. Using an agile development method might be the most effectiv emethod for a larger project os that
+            deadlines. - https://www.float.com/?utm_source=dpm&utm_content=rms Using an agile development method might
+            be the most effectiv emethod for a larger project os that
             the project can be delivered early/on-time but continually improved and changes in the market/tech can be
-            responded to.</p>
+            responded to. - https://www.cio.com/article/3156998/agile-project-management-a-beginners-guide.html</p>
     </div>
     <div class="unit1">
         <h3>1.3 Plan and carry out tasks using IT - e.g. making your website. How will you plan it? Include a link to
@@ -59,7 +64,10 @@
             with yourself or with the client you are working for. The MVP can then be worked on further with updates, or
             in pre-release depending how far along schedule the development team is, but ultimately the MVP ensures that
             the project will be workable and live by a deadline - rather than allowing ‘scope creep’ - when there is
-            uncontrolled growth in a projects scope and ambition. Another example of risk could relate to the actual
+            uncontrolled growth in a projects scope and ambition. -
+            https://www.thirdandgrove.com/four-risks-will-kill-your-digital-project-you-dont-even-know-look ;
+            https://www.pmi.org/learning/library/top-five-causes-scope-creep-6675Another example of risk could relate to
+            the actual
             technology itself rather than poor management, for example the deployment of a new operating system could
             effect whether your website or app is functional on the newest version. </p>
     </div>
@@ -73,14 +81,35 @@
             consideration, as Siddharth at Tutsplus highlights, when choosing a framework to develop from it is
             important to note that it is open source or at least can be used commercially
             -https://code.tutsplus.com/tutorials/15-important-considerations-for-choosing-a-web-dev-framework--net-8035
-            If the availability and usability of your chosen technologies and frameworks are not taken into account
+        </p>
+        <p>If the availability and usability of your chosen technologies and frameworks are not taken into account
             prior to development this could mean that your website or app is developed but then it cannot be
             commercially deployed due to copyright issues or other hold ups with licensing. A library, such as AJAX, of
             code which is inbuilt into most frameworks is another important consideration so that you can accurately and
             easily program in your chosen languages with the software intuitively knowing what you are typing. As
             opensource.com note it is also important to ensure that your chosen technology has strong ‘maintainership’,
             it will be getting frequent updates to ensure its longevity and usability -
-            https://opensource.com/article/18/3/pick-right-technology
+            https://opensource.com/article/18/3/pick-right-technology</P>
+        <p> It is best to try and build your solution in the simplest way, whether this means using the
+            most modern technology or a language that you know best and know you can implement all the features you want
+            with this language. In terms of web development, building a landing page with technology such as Wordpress
+            or Unbounce could be the best option because this helps to save time and implement a landing page without
+            having to totally build it from scratch. -
+            https://medium.com/unicorn-supplies/9-steps-how-to-choose-a-technology-stack-for-your-web-application-a6e302398e55
+        </p>
+        <p> Security could become the most important factor if the end result of our project will collect
+            collect users data then it could perhaps be the most important factor. So when contemplating security as a
+            factor it is first important to figure out exactly what you need to keep secure to then decide which
+            software to use or which tools to implement to keep it secure - furthermore security also depends on the
+            skillset of the developer and whether they have written their code without many weaknesses.-
+            https://medium.com/unicorn-supplies/9-steps-how-to-choose-a-technology-stack-for-your-web-application-a6e302398e55
+        </p>
+        <p> Horizontal scalability - the ability of a web application to accommodate more requests. So, an
+            app must be able to work if the number of users continues to grow. Vertical scalability - the ability to add
+            new components to a web application without damaging its performance. It is important to ensure that
+            whatever technology I am using caters to both of these needs, in case the application becomes more popular
+            than intended or if there is a need to add new features. -
+            https://rubygarage.org/blog/technology-stack-for-web-development
         </p>
     </div>
     <div class="unit1">
@@ -94,31 +123,41 @@
         <p>GitHub: Git and GitHub are especially useful for ensuring that changes to a system are recorded overtime so
             that you can always access and recall earlier versions later. For example, if you are a ‘web designer and
             want to keep every version of an image of layout (which you would most certainly want to), a Version Control
-            System (VCS) is a very wise thing to use.’ This is because it allows you to revert files or the entire
+            System (VCS) is a very wise thing to use.’
+            -https://git-scm.com/book/en/v2/Getting-Started-About-Version-Control This is because it allows you to
+            revert files or the entire
             project back to a previous state if there is an issue and you can view who and when something was last
             modified, to ensure that the problem can be overcome.</p>
     </div>
     <div class="unit1">
         <h3>1.7 Describe legal guidelines and constraints that impact digital projects - how does GDPR impact digital
             projects?</h3>
-        <p>Understand the needs of your career/business or the client: It is vital that the technology you are engaging
-            with/purchasing can fulfil the client brief and your own developing career direction if you are working
-            alone or the goals of your business/agency if you are working together.</p>
-        <p>Easiest solution: It is best to try and build your solution in the simplest way, whether this means using the
-            most modern technology or a language that you know best and know you can implement all the features you want
-            with this language. In terms of web development, building a landing page with technology such as Wordpress
-            or Unbounce could be the best option because this helps to save time and implement a landing page without
-            having to totally build it from scratch.</p>
-        <p>Security: Security could become the most important factor if the end result of our project will collect
-            collect users data then it could perhaps be the most important factor. So when contemplating security as a
-            factor it is first important to figure out exactly what you need to keep secure to then decide which
-            software to use or which tools to implement to keep it secure - furthermore security also depends on the
-            skillset of the developer and whether they have written their code without many weaknesses.</p>
-        <p>Scalability: Horizontal scalability - the ability of a web application to accommodate more requests. So, an
-            app must be able to work if the number of users continues to grow. Vertical scalability - the ability to add
-            new components to a web application without damaging its performance. It is important to ensure that
-            whatever technology I am using caters to both of these needs, in case the application becomes more popular
-            than intended or if there is a need to add new features.</p>
+        <p>One of the most crucial elements of the new GDPR, or general data protection regulation, is that it should be
+            easier for people to withdraw their consent for data processing. The Information Commissioner’s Office
+            stated that the main impact of GDPR was ‘Telling people they have the right to withdraw their consent at any
+            time, and how to do this. It must be as easy to withdraw as it was to give consent. This means you will need
+            to have simple and effective withdrawal mechanisms in place.’ -
+            https://www.edelman.co.uk/insights/how-will-gdpr-impact-digital-marketing-professionals Some of the more
+            specific rights of GDPR refer
+            to the right to access which means that ‘individuals have the right to request access to their personal data
+            and to ask how their data is used by the company after it has been gathered’ and the right to be forgotten
+            which means that ‘if consumers are no longer customers, or if they withdraw their consent from a company to
+            use their personal data, then they have the right to have their data deleted.’ -
+            https://www.superoffice.com/blog/gdpr/ Therefore, much of GDPR gives
+            individuals more right to have control over their data and restrict the way that corporations and businesses
+            use that data, at the very least ensuring that the consumer has some idea about what their data is being
+            used for or if there data is being used at all. <br>
+            However, GDPR could perhaps have a positive impact for digital projects attempting to collect data for
+            monetary gain but a negative impact for the consumer. Enza Iannopollo, a Forrester senior analyst for risk
+            and security, states that ‘one of the changes we’re starting to see is the preference for first-party data,
+            the data which comes directly from the consumer, because you have consent and the customer trusts you…
+            because of that trust, they’re going to provide you with more accurate information, more relevant
+            information - because with consent, if you’re transparent and I trust you, more likely I’m going to share
+            more data with you.’ -
+            https://www.zdnet.com/article/gdpr-how-europes-digital-privacy-rules-have-changed-everything/ So GDPR could
+            actually mean that more accurate data is complied, which could be more
+            useful or companies that benefit from collecting and creating data profiles. </p>
+
     </div>
     <ul id="menu-bar">
         <li class="active"><a href="index.html">Home</a></li>
