--- a/unit1.html
+++ b/unit1.html
@@ -18,7 +18,7 @@
             advertisement through promotional graphic design and computer graphics which could be implemented in TV or
             internet (such as on YouTube) advertisements. Online shopping is an incredibly strong market in the modern
             age, with 67% of millennials and 56% of gen-xers preferring to shop online, the two generations of the
-            future. - https://www.thebalancesmb.com/compare-brick-and-mortar-stores-vs-online-retail-sites-4571050</p>
+            future. - <a href="https://www.thebalancesmb.com/compare-brick-and-mortar-stores-vs-online-retail-sites-4571050">thebalancesmb.com</a></p>
     </div>
     <div class="unit1">
         <h3>1.2 Describing methods, skills and resources needed to complete digital projects successfully - what do you
@@ -29,20 +29,20 @@
             not push the boundaries of projects too much, attempting to include to omany features than is possible in
             your timeframe. While tempting, this could just bring additional stress for you or your team, while ensuring
             that you waste time not working on the actual core of your project. -
-            https://www.mediavisioninteractive.com/digital-marketing-2/10-tips-for-effective-digital-project-management/
+            <a href="https://www.mediavisioninteractive.com/digital-marketing-2/10-tips-for-effective-digital-project-management">mediavisioninteractive</a>
             For a digital project to succeed it is
             important for all involved in the process to be effective communicators - whether this applies to teamwork
             collaboration or communicating and updating the client as the project goes along. -
-            https://www.mediavisioninteractive.com/digital-marketing-2/10-tips-for-effective-digital-project-management/
+            <a href="https://www.mediavisioninteractive.com/digital-marketing-2/10-tips-for-effective-digital-project-management/>mediavisioninteractive">mediavisioninteractive</a>
             Another important aspect
             is attention to detail, pertaining both to code and context. While it is important to notice any errors in
             code or a method to execute a certain feature, it is also important that the user experience and actual
             content of the project is not compromised. In temrs of resources and tools, as well as Trello there are some
             other useful management systems such as Float or Google Calender which can help divvy up tasks and set
-            deadlines. - https://www.float.com/?utm_source=dpm&utm_content=rms Using an agile development method might
+            deadlines. - <a href="https://www.float.com/?utm_source=dpm&utm_content=rms">float.com</a> Using an agile development method might
             be the most effectiv emethod for a larger project os that
             the project can be delivered early/on-time but continually improved and changes in the market/tech can be
-            responded to. - https://www.cio.com/article/3156998/agile-project-management-a-beginners-guide.html</p>
+            responded to. - <a href="https://www.cio.com/article/3156998/agile-project-management-a-beginners-guide.html">cio.com</a></p>
     </div>
     <div class="unit1">
         <h3>1.3 Plan and carry out tasks using IT - e.g. making your website. How will you plan it? Include a link to
@@ -65,8 +65,8 @@
             in pre-release depending how far along schedule the development team is, but ultimately the MVP ensures that
             the project will be workable and live by a deadline - rather than allowing ‘scope creep’ - when there is
             uncontrolled growth in a projects scope and ambition. -
-            https://www.thirdandgrove.com/four-risks-will-kill-your-digital-project-you-dont-even-know-look ;
-            https://www.pmi.org/learning/library/top-five-causes-scope-creep-6675Another example of risk could relate to
+            <a href="https://www.thirdandgrove.com/four-risks-will-kill-your-digital-project-you-dont-even-know-look">thirdandgrove.com</a> ;
+            <a href="https://www.pmi.org/learning/library/top-five-causes-scope-creep-6675">pmi.org</a> Another example of risk could relate to
             the actual
             technology itself rather than poor management, for example the deployment of a new operating system could
             effect whether your website or app is functional on the newest version. </p>
@@ -80,7 +80,7 @@
             something which is perhaps the most up to date or the most on trend at that moment. Another important
             consideration, as Siddharth at Tutsplus highlights, when choosing a framework to develop from it is
             important to note that it is open source or at least can be used commercially
-            -https://code.tutsplus.com/tutorials/15-important-considerations-for-choosing-a-web-dev-framework--net-8035
+            -<a href="https://code.tutsplus.com/tutorials/15-important-considerations-for-choosing-a-web-dev-framework--net-8035">code.tutsplus.com</a>
         </p>
         <p>If the availability and usability of your chosen technologies and frameworks are not taken into account
             prior to development this could mean that your website or app is developed but then it cannot be
@@ -88,28 +88,28 @@
             code which is inbuilt into most frameworks is another important consideration so that you can accurately and
             easily program in your chosen languages with the software intuitively knowing what you are typing. As
             opensource.com note it is also important to ensure that your chosen technology has strong ‘maintainership’,
-            it will be getting frequent updates to ensure its longevity and usability -
-            https://opensource.com/article/18/3/pick-right-technology</P>
+            it will be getting frequent updates to ensure its longevity and usability. -
+            <a href="https://opensource.com/article/18/3/pick-right-technology">opensource.com</a></P>
         <p> It is best to try and build your solution in the simplest way, whether this means using the
             most modern technology or a language that you know best and know you can implement all the features you want
             with this language. In terms of web development, building a landing page with technology such as Wordpress
             or Unbounce could be the best option because this helps to save time and implement a landing page without
             having to totally build it from scratch. -
-            https://medium.com/unicorn-supplies/9-steps-how-to-choose-a-technology-stack-for-your-web-application-a6e302398e55
+            <a href="https://medium.com/unicorn-supplies/9-steps-how-to-choose-a-technology-stack-for-your-web-application-a6e302398e55">medium.com</a>
         </p>
         <p> Security could become the most important factor if the end result of our project will collect
             collect users data then it could perhaps be the most important factor. So when contemplating security as a
             factor it is first important to figure out exactly what you need to keep secure to then decide which
             software to use or which tools to implement to keep it secure - furthermore security also depends on the
             skillset of the developer and whether they have written their code without many weaknesses.-
-            https://medium.com/unicorn-supplies/9-steps-how-to-choose-a-technology-stack-for-your-web-application-a6e302398e55
+            <a href="https://medium.com/unicorn-supplies/9-steps-how-to-choose-a-technology-stack-for-your-web-application-a6e302398e55">medium.com</a>
         </p>
         <p> Horizontal scalability - the ability of a web application to accommodate more requests. So, an
             app must be able to work if the number of users continues to grow. Vertical scalability - the ability to add
             new components to a web application without damaging its performance. It is important to ensure that
             whatever technology I am using caters to both of these needs, in case the application becomes more popular
             than intended or if there is a need to add new features. -
-            https://rubygarage.org/blog/technology-stack-for-web-development
+            <a href="https://rubygarage.org/blog/technology-stack-for-web-development">rubygarage.org</a>
         </p>
     </div>
     <div class="unit1">
@@ -124,7 +124,7 @@
             that you can always access and recall earlier versions later. For example, if you are a ‘web designer and
             want to keep every version of an image of layout (which you would most certainly want to), a Version Control
             System (VCS) is a very wise thing to use.’
-            -https://git-scm.com/book/en/v2/Getting-Started-About-Version-Control This is because it allows you to
+            -<a href= "https://git-scm.com/book/en/v2/Getting-Started-About-Version-Control">git-scm.com</a> This is because it allows you to
             revert files or the entire
             project back to a previous state if there is an issue and you can view who and when something was last
             modified, to ensure that the problem can be overcome.</p>
@@ -137,13 +137,13 @@
             stated that the main impact of GDPR was ‘Telling people they have the right to withdraw their consent at any
             time, and how to do this. It must be as easy to withdraw as it was to give consent. This means you will need
             to have simple and effective withdrawal mechanisms in place.’ -
-            https://www.edelman.co.uk/insights/how-will-gdpr-impact-digital-marketing-professionals Some of the more
+            <a href="https://www.edelman.co.uk/insights/how-will-gdpr-impact-digital-marketing-professionals">edelman.co.uk</a> Some of the more
             specific rights of GDPR refer
             to the right to access which means that ‘individuals have the right to request access to their personal data
             and to ask how their data is used by the company after it has been gathered’ and the right to be forgotten
             which means that ‘if consumers are no longer customers, or if they withdraw their consent from a company to
             use their personal data, then they have the right to have their data deleted.’ -
-            https://www.superoffice.com/blog/gdpr/ Therefore, much of GDPR gives
+            <a href="https://www.superoffice.com/blog/gdpr/">superoffice.com</a> Therefore, much of GDPR gives
             individuals more right to have control over their data and restrict the way that corporations and businesses
             use that data, at the very least ensuring that the consumer has some idea about what their data is being
             used for or if there data is being used at all. <br>
@@ -154,7 +154,7 @@
             because of that trust, they’re going to provide you with more accurate information, more relevant
             information - because with consent, if you’re transparent and I trust you, more likely I’m going to share
             more data with you.’ -
-            https://www.zdnet.com/article/gdpr-how-europes-digital-privacy-rules-have-changed-everything/ So GDPR could
+            <a href="https://www.zdnet.com/article/gdpr-how-europes-digital-privacy-rules-have-changed-everything/">zdnet.com</a> So GDPR could
             actually mean that more accurate data is complied, which could be more
             useful or companies that benefit from collecting and creating data profiles. </p>
 
