--- a/unit2.html
+++ b/unit2.html
@@ -17,9 +17,15 @@
             self-created gif of this movie because is because it goes with the aesthetic theme of my website which is an
             80s vapourware inspired theme and also I am a fan of this film! It also has a button which takes you to the
             next page which is a further about me section which gives a more detailed description of me than the initial
-            landing page. From here there is a navigation bar to check out the outcomes. The first outcome page contains
-            an image of a red spaceman with my answers next to it in a black colour, then the next one has a gif of the
-            playstation loading screen with my answers on the left.
+            landing page and has a gif of the playstation logo in the background. From here there is a navigation bar to
+            check out the outcomes. The first outcome page contains
+            an image of a red spaceman with my answers next to it in a black colour. The next outcome page contains gifs
+            of packman going across the screen with a red border which contains the text on a black background. Unit 1,
+            Outcomes 2 has a gif of an 8bit Charizard on a white background with the headings for the questions being
+            contained in a blue border. The answers are then below teh titles in a standard format, with the text being
+            aligned left but generally it is in the middle due to margins. The Unit 2 page has a retro computer gif with
+            the text over it. The text has a somewhat transparent background behind it so that it is readable but so
+            that the computer gif behind it is still visible.
         </p>
     </div>
     <div class="unit2text">
@@ -32,7 +38,8 @@
             protected immediately under copyright. However, it is still recommended to register with the UK Copyright
             Service because websites, especially with the highly accessible nature of information and images on the
             internet, are easily subject to abuses by the general public. Another important constraint that web
-            designers and developers must be aware of flexibility. When building a website it is important to note that
+            designers and developers must be aware of is flexibility. When building a website it is important to note
+            that
             users and viewers will stretch and distort the designs contained within your website and that they will
             access the website on different browsers and devices. Therefore, it is important to develop, if you are
             making a website for general use especially, with flexibility in mind - ensuring that the text will expand
@@ -72,4 +79,5 @@
             <li><a href="aboutme.html">About Me!</a></li>
         </ul>
 </body>
+
 </html>
