--- a/aboutme.html
+++ b/aboutme.html
@@ -10,17 +10,18 @@
 </head>
 
 <body id="aboutme">
-    <section class= "hello">
-    <h2>About Me</h2>
-    <p> Hello! My name is Mia and I'm a history student at the University of Sheffield. I've always had a strong
-        interest in technology due to my love of video games which began as a child. This interest only grew when I
-        started a job at John Lewis selling laptops and computers to the general public, meaning that I went to
-        conferences to learn
-        more about the hardware and simply had to know a lot to be able to accurately sell to clients. I have a keen
-        passion for web development as I like the challenge that comes along with trying to implement code to solve
-        very visual problems. Other interests of minde include photograph and music, I have played the guitar since the
-        age of seven!</p>
-        </section>
+    <section class="hello">
+        <h2>About Me</h2>
+        <p> Hello! My name is Mia and I'm a history student at the University of Sheffield. I've always had a strong
+            interest in technology due to my love of video games which began as a child. This interest only grew when I
+            started a job at John Lewis selling laptops and computers to the general public, meaning that I went to
+            conferences to learn
+            more about the hardware and simply had to know a lot to be able to accurately sell to clients. I have a keen
+            passion for web development as I like the challenge that comes along with trying to implement code to solve
+            very visual problems. Other interests of mine include photograph and music - I have played the guitar since
+            the
+            age of seven!</p>
+    </section>
     <ul id="menu-bar">
         <li class="active"><a href="index.html">Home</a></li>
         <ul>
